complete edit auth module
