# service/seek_help.go
@@ -76,11 +76,18 @@ func RequestSeekHelpList(c *gin.Context) {
 	seekHelps := make([]models.SeekHelps, 0)
 	if sortOption == "0" {
 		tx = tx.Order("id DESC")
-	} else {
+	} else if sortOption == "1" {
 		tx = tx.Order("reward DESC")
+	} else if sortOption == "2" {
+		tx = tx.Order("like_sum DESC")
+	} else if sortOption == "3" {
+		tx = tx.Order("comment_sum DESC")
+	} else {
+		tx = tx.Order("lend_hand_sum DESC")
 	}
-	// todo 算了，把后面三个筛选条件也给实现了吧，preload结合手写sort
-	if err := tx.Offset(baseOffset).Limit(size).Find(&seekHelps).Error; err != nil {
+	if err := tx.Offset(baseOffset).Limit(size).Preload("Users.Avatar").
+		Omit("update_time", "code_path", "like", "page_view", "document", "image_path", "users_id").
+		Find(&seekHelps).Error; err != nil {
 		if err != gorm.ErrRecordNotFound {
 			logger.Errorln(err)
 			c.JSON(http.StatusOK, gin.H{
@@ -92,6 +99,24 @@ func RequestSeekHelpList(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, gin.H{
 		"code": 0,
-		"msg":  "Mysql operation failure",
+		"msg":  "Obtaining data successfully",
+		"data": gin.H{
+			"total":          total,
+			"seek-help-list": seekHelps,
+		},
 	})
 }
+
+// @Tags 用户方法
+// @Summary 添加求助帖子
+// @Accept multipart/form-data
+//
+//	@Param Authorization header string true	"Authentication header"
+//
+// @Param baseOffset formData string true "baseOffset"
+// @Param size formData string true "size"
+// @Param sortOption formData string true "sortOption"
+// @Param language formData string true "language"
+// @Param status formData string true "status"
+// @Success 200 {string} json "{"code":"0"}"
+// @Router /seek-help-list [post]
